--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,34 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_desc">Navigation header</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+<string name="select_blood_group">Blood Group</string>
+<string name="select_blood_component">Blood Component</string>
+
+    <string-array name="blood_groups">
+        <item>Select Blood Group</item>
+        <item>A+</item>
+        <item>A-</item>
+        <item>B+</item>
+        <item>B-</item>
+        <item>AB+</item>
+        <item>AB-</item>
+        <item>O+</item>
+        <item>O-</item>
+    </string-array>
+
+    <string-array name="blood_components">
+        <item>Select Blood Component</item>
+        <item>Whole Blood</item>
+        <item>Plasma</item>
+        <item>Platelets</item>
+        <item>Peaked Red Blood Cells</item>
+        <item>Fresh Frozen Plasma</item>
+        <item>Irradiated RBC</item>
+        <item>Leukoreduced RBC</item>
+        <item>RBC</item>
+
+    </string-array>
 
 </resources>
